added image and text

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Site Under Construction
+<!doctype html>
+<html lang="en">
+   <head>
+      <meta charset="UTF-8">
+      <title>Robel's Page</title>
+      <style type="text/css">
+         body {
+         background-image: url('images/cw.jpg');
+         background-attachment: fixed; 
+         background-repeat: no-repeat;
+         background-size: 100% 100%; 
+         font-family: andale mono;
+         }
+      </style>
+   </head>
+   <body>
+      <h1 style="color:#cc99ff"><b>Site under construction</b></h1>
+      <p style="color:#cc99ff">bear with me ;)</p>
+      <footer>
+         <ul>
+            <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/" >LinkedIn</a></li>
+            <li><a target="_blank" href="https://twitter.com/robelyemane_">Twitter</a></li>
+            <li><a target="_blank" href="https://www.goodreads.com/user/show/87203258-robel-yemane">goodreads</a></li>
+            <li><a target="_blank" href="https://mail.google.com/mail/u/0/?view=cm&source=mailto&to=robel.yemane03@gmail.com">e-mail</a></li>
+         </ul>
+      </footer>
+   </body>
+</html>
