--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
    <head>
       <meta charset="UTF-8">
       <title>Robel's Page</title>
-      <style type="text/css">
+      <style>
          body {
-         background-image: url('images/cw.jpg');
-         background-attachment: fixed; 
-         background-repeat: no-repeat;
-         background-size: 100% 100%; 
-         font-family: andale mono;
+            background-image: url("images/cw.jpg");
+            background-attachment: fixed; 
+            background-repeat: no-repeat;
+            background-size: 100% 100%; 
+            font-family: andale mono;
          }
       </style>
    </head>
