changed page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
-      <title>Robel's Page</title>
+      <title>Robel Yemane</title>
       <style>
          body {
             background-image: url("images/cw.jpg");
