--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
       <title>Robel Yemane</title>
       <style>
          body {
-            background-image: url("images/cw.jpg");
+            background-image: url("images/gwsunset.jpg");
             background-attachment: fixed; 
             background-repeat: no-repeat;
-            background-size: 100% 100%; 
+            background-size: 100% 100%;;
             font-family: andale mono;
          }
       </style>
