--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             background-image: url("images/gwsunset.jpg");
             background-attachment: fixed; 
             background-repeat: no-repeat;
-            background-size: 100% 100%;
+            background-size: cover; 
             font-family: andale mono;
          }
       </style>
