--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
       <style>
          body {
             background-image: url("images/gwsunset.jpg");
-            background-attachment: fixed; 
             background-repeat: no-repeat;
             background-size: cover; 
+            background-attachment: fixed;
+            image-orientation: from-image;
             font-family: andale mono;
          }
       </style>
