--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
          body {
             background-image: url("images/gwsunset.jpg");
             background-repeat: no-repeat;
-            background-size: contain; 
+            background-size: 100% 100%; 
             background-attachment: fixed;
             image-orientation: from-image;
             font-family: andale mono;
