temp img setting, pending css

--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
       <title>Robel Yemane</title>
       <style>
          body {
-            background-image: url("images/gwsunset.jpg");
+            background-image: url("images/cw.jpg");
             background-repeat: no-repeat;
-            background-size: 100% 100%; 
+            background-size: 100% 100%;
             background-attachment: fixed;
-            image-orientation: from-image;
             font-family: andale mono;
          }
       </style>
    </head>
    <body>
-      <h1 style="color:#cc99ff"><b>Site under construction</b></h1>
-      <p style="color:#cc99ff">bear with me ;)</p>
+      <h1><b>Site under construction</b></h1>
+      <p>bear with me ;)</p>
       <footer>
          <ul>
             <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/" >LinkedIn</a></li>
