fixed mailto link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/" >LinkedIn</a></li>
             <li><a target="_blank" href="https://twitter.com/robelyemane_">Twitter</a></li>
             <li><a target="_blank" href="https://www.goodreads.com/user/show/87203258-robel-yemane">goodreads</a></li>
-            <li><a target="_blank" href="https://mail.google.com/mail/u/0/?view=cm&source=mailto&to=robel.yemane03@gmail.com">e-mail</a></li>
+            <li><a target="_blank" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
          </ul>
       </footer>
    </body>
