--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
       <link rel="stylesheet" type="text/css" href="styles/style.css">
    </head>
    <body>
-    <div class="header">
+    <div id="header">
       <h1>Robel Yemane</h1>
     </div>
    <div id="main">
-<p>
+    <p>
     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci       tation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-</p>
+    </p>
     </div>
-      <ul>
-            <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/" >LinkedIn</a></li>
+    <div id="contact">
+        <ul>
+            <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/">LinkedIn</a></li>
             <li><a target="_blank" href="https://twitter.com/robelyemane_">Twitter</a></li>
             <li><a target="_blank" href="https://www.goodreads.com/user/show/87203258-robel-yemane">goodreads</a></li>
             <li><a target="_blank" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
-         </ul>
-   </body>
+        </ul>
+    </div>
+    </body>
 </html>
