main page update and styling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,20 @@ high school with a Building Construction diploma.
     The last two I'm forgetting by the day - shamefully! 
     </p>
 <p>
-Why am I doing this site?
+<h2>Why a website?</h2>
+<p>
+Previously, I had little to no interest in front-end and/or web development. During
+the Coronavirus lockdown, however, I thought I could make use of some of my
+spare time learning something new  and since I have always toyed with the idea
+of having my own website: here it is!
+</p>
+<p>
+Very basic, as are my current skills in HTML/CSS. 
+</p>
+<p>
+I intend to keep it as minimalist and as basic as it needs to be, to be useful. This means not using
+any framework or library and hand-writing everything. 
+
 </p>
     </div>
     <div id="contact">
