added about pages

--- a/about.html
+++ b/about.html
@@ -8,60 +8,46 @@
    <body>
     <div id="header">
       <h1>Robel Yemane</h1>
-    </div> 
-   <div id="menu">
-        <ul>
-            <li><a target="_blank"href="about.html">about</a></li>
-            <li><a target="_blank" href="https://twitter.com/robelyemane_">now</a></li>
-            <li><a target="_blank"href="https://www.goodreads.com/user/show/87203258-robel-yemane">blog</a></li>
-        </ul>
     </div>
- 
    <div id="aboutme">
     <p>
-      I am a Software Engineer (DevOps, if that's a thing) living and working
+<ul>
+        
+<li> 1985 - made in Eritrea.</li>
+<li> 1991 - went to the Italian school and stayed for 13 more years.</li>
+<li> 2003 - graduate from high school.</li>
+<li> 2004 - military service.</li>
+<li> 2005 - building surveyor for ~5 years.</li>
+<li> 2010 moved to the UK and started Uni (University of Westminster - Computer
+ Networks and Communications).</li>
+<li> Bought a second hand bicycle and rode around London (I still do but with
+a newer one.)</li>
+<li> 2012 A year placement in Blackberry.</li>
+<li> 2014 Graduated from and started my first real software engineering job @ Thomson Reuters.</li>
+<li> 2018 moved companies and  got married</li>
+<li> 2019 moved again (current company)</li>
+<li> 2020 decided to buy a domain and start web dev for fun.</li>
 
-      in London. I moved to the UK in 2010 from Eritrea where I was born and
-
-      lived for ~ 2/3 of my life.  
-     </p>
-     <p> 
-      In 2014 I graduated from the University of Westminster in Computer
-Networks and Comms (more on that on my LinkedIn).       
-   </p> 
-    <p>
-    Interested in Computers, troubleshooting from a young age, I have
-formalised that interest by getting a degree in Computer Networks.
-
-    Multilingual - English, <a target="_blank"
-href="https://en.wikipedia.org/wiki/Tigrinya_language">Tigrigna</a>, Italian and French.
-    The last two I'm quite forgetting, shamefully. The plan is to practice
-them, but in reality I'm losing them by the day.
-    </p>
-<p>
-Lately I have been really interested in the philosophy of Stoicism. I find that
-it answers many of the question that I come up about my life, emotions and the
-world in general. I may write about this in the form of blogs or musings etc...
-In the meantime I am reading one letter each morning from Seneca's letters to
-Lucillium (Epistulae Morales ad Lucilium)[link to TF's ].
-</p>
-<p>
-What's the plan with this website? Whilst in the lockdown I thought I could
-teach myself web dev, something I've always postponed or was never as
-interested. I've mostly if not entirely done backend development.
-Voila' I decided to get a website and start developing. 
-The plan is to keep improving this site as I go and learn more about HTML, CSS,
-JS etc.
-It is also my plan to do everything by hand, 'the hard way' etc. and keep this
-site as minimalist as possible [like this https://mnmlist.com/about/ :D ].
-
+<li>Tech enthusiast and multilingual.</li>
+<li>Interested in the philosophy of Stoicism. I find that</li>
+it answers many of the question I have about my life, emotions and the
+world in general.</li>
+<li> I try to mediate and journal every day.</li>
+<li> Enjoy listening to podcast (more than watching) and nowadays the number of</li>
+<li> podcasts I am subscribed to is going a bit of of hand.</li>
+Some of the ones I regularly listen to are ( Arseblog, Making Sense, The
+knowledge Project, The Tim Ferriss Show, The Joe Rogan Experience,
+Conversations with Tyler Cowen, Derek Sivers, Hardcore History, Naval and some
+others)</li>
+<li> Spend some time reading books as well - some of them are <a
+ href="https://www.goodreads.com/robelyemane">here</a> </li>
+</ul>
 </p>
     </div>
     <div id="contact">
         <ul>
             <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/">LinkedIn</a></li>
             <li><a target="_blank" href="https://twitter.com/robelyemane_">Twitter</a></li>
-            <li><a target="_blank" href="https://www.goodreads.com/user/show/87203258-robel-yemane">goodreads</a></li>
             <li><a target="_blank" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
         </ul>
     </div>
