--- a/index.html
+++ b/index.html
@@ -7,16 +7,8 @@
    </head>
    <body>
     <div id="header">
-      <h1>Robel Yemane</h1>
-    </div> 
-   <div id="menu">
-        <ul>
-            <li><a target="_self"  href="about.html">about</a></li>
-            <li><a target="_blank" href="https://twitter.com/robelyemane_">now</a></li>
-            <li><a target="_blank"href="https://www.goodreads.com/user/show/87203258-robel-yemane">blog</a></li>
-        </ul>
+      <h1><a target="_self" href="index.html">Robel Yemane</a></h1>
     </div>
- 
    <div id="aboutme">
     <h2>Me in a Nutshell</h2>
     <p>
@@ -28,36 +20,38 @@
 of my life.
      </p>
      <p> 
-    I had a few years' stint in building construction after graduating from
-high school with a Building Construction diploma.
+    I had a few years stint as a building surveryor after finishing high chool. 
 </p>
 <p>
-    Multilingual - English, <a target="_blank" href="https://en.wikipedia.org/wiki/Tigrinya_language">Tigrigna</a>, Italian and French.
-    The last two I'm forgetting by the day - shamefully! 
-    </p>
+    Multilingual - English, <a target="_self" href="https://en.wikipedia.org/wiki/Tigrinya_language">Tigrigna</a>, Italian and French.
+    Sadly, I'm forgetting the last two by the day.
+</p>
+<h2>Some more details?</h2>
+<p>
+   More <a target="_self"  href="about.html">"about me" here</a>.
+</p>
 <p>
 <h2>Why a website?</h2>
 <p>
-Previously, I had little to no interest in front-end and/or web development. During
-the Coronavirus lockdown, however, I thought I could make use of some of my
-spare time learning something new  and since I have always toyed with the idea
-of having my own website: here it is!
+ Previously, I had little to no interest in front-end or web development. 
+During the lengthy lockdown, however, I thought I could make use of the time by 
+learning something new. So, since I have always toyed with the idea of having my own 
+website: here it is!
 </p>
 <p>
 Very basic, as are my current skills in HTML/CSS. 
 </p>
 <p>
-I intend to keep it as minimalist and as basic as it needs to be, to be useful. This means not using
+I intend to keep it as minimalist as possible. This means not using
 any framework or library and hand-writing everything. 
 
 </p>
     </div>
     <div id="contact">
         <ul>
-            <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/">LinkedIn</a></li>
-            <li><a target="_blank" href="https://twitter.com/robelyemane_">Twitter</a></li>
-            <li><a target="_blank" href="https://www.goodreads.com/user/show/87203258-robel-yemane">goodreads</a></li>
-            <li><a target="_blank" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
+            <li><a target="_self" href="https://www.linkedin.com/in/ryemane/">LinkedIn</a></li>
+            <li><a target="_self" href="https://twitter.com/robelyemane_">Twitter</a></li>
+            <li><a target="_self" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
         </ul>
     </div>
     </body>
