--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
    </head>
    <body>
     <div id="header">
-      <h1>Robel Yemane</h1>
+      <h1><a target="_self" href="index.html">Robel Yemane</a></h1>
     </div>
    <div id="aboutme">
     <p>
