first phase almost done

--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
       <h1><a target="_self" href="index.html">Robel Yemane</a></h1>
     </div>
    <div id="aboutme">
-    <h2>Me in a Nutshell</h2>
+    <h2>Me in a nutshell</h2>
     <p>
       Software Engineer - transitioned from application development to
 'DevOps'.
 </p>
 <p>
-    I live and work in London since 2010. Born and lived in Eritrea for ~ 2/3
+    I live and work in London. Born and lived in Eritrea for ~ 2/3
 of my life.
      </p>
      <p> 
     I had a few years stint as a building surveryor after finishing high chool. 
 </p>
 <p>
-    Multilingual - English, <a target="_self" href="https://en.wikipedia.org/wiki/Tigrinya_language">Tigrigna</a>, Italian and French.
+   <del>Multilingual</del> - English, <a target="_self" href="https://en.wikipedia.org/wiki/Tigrinya_language">Tigrigna</a>, Italian and French.
     Sadly, I'm forgetting the last two by the day.
 </p>
 <h2>Some more details?</h2>
 <p>
-   More <a target="_self"  href="about.html">"about me" here</a>.
+   More <a target="_self"  href="about.html">about me here</a>.
 </p>
 <p>
+<h2>Latest?</h2>
+<p>
+   <a target="_self"  href="now.html">Stuff I am doing now</a>.
+</p>
 <h2>Why a website?</h2>
 <p>
  Previously, I had little to no interest in front-end or web development. 
@@ -46,11 +50,11 @@ I intend to keep it as minimalist as possible. This means not using
 any framework or library and hand-writing everything. 
 
 </p>
-    </div>
+</div>
     <div id="contact">
         <ul>
-            <li><a target="_self" href="https://www.linkedin.com/in/ryemane/">LinkedIn</a></li>
-            <li><a target="_self" href="https://twitter.com/robelyemane_">Twitter</a></li>
+            <li><a target="_self" href="https://www.linkedin.com/in/ryemane/">linkedin</a></li>
+            <li><a target="_self" href="https://twitter.com/robelyemane_">twitter</a></li>
             <li><a target="_self" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
         </ul>
     </div>
