--- a/now.html
+++ b/now.html
@@ -7,61 +7,33 @@
    </head>
    <body>
     <div id="header">
-      <h1>Robel Yemane</h1>
-    </div> 
-   <div id="menu">
-        <ul>
-            <li><a target="_self"  href="about.html">about</a></li>
-            <li><a target="_blank" href="https://twitter.com/robelyemane_">now</a></li>
-            <li><a target="_blank"href="https://www.goodreads.com/user/show/87203258-robel-yemane">blog</a></li>
-        </ul>
+      <h1><a target="_self" href="index.html">Robel Yemane</a></h1>
     </div>
- 
    <div id="aboutme">
-    <p>
-      I am a Software Engineer (DevOps, if that's a thing) living and working
-
-      in London. I moved to the UK in 2010 from Eritrea where I was born and
-
-      lived for ~ 2/3 of my life.  
-     </p>
-     <p> 
-      In 2014 I graduated from the University of Westminster in Computer
-Networks and Comms (more on that on my LinkedIn).       
-   </p> 
-    <p>
-    Interested in Computers, troubleshooting from a young age, I have
-formalised that interest by getting a degree in Computer Networks.
-
-    Multilingual - English, <a target="_blank"
-href="https://en.wikipedia.org/wiki/Tigrinya_language">Tigrigna</a>, Italian and French.
-    The last two I'm quite forgetting, shamefully. The plan is to practice
-them, but in reality I'm losing them by the day.
-    </p>
+<p id=subtitle>
+(This is my <a href="https://nownownow.com/about">NOW</a> page)
 <p>
-Lately I have been really interested in the philosophy of Stoicism. I find that
-it answers many of the question that I come up about my life, emotions and the
-world in general. I may write about this in the form of blogs or musings etc...
-In the meantime I am reading one letter each morning from Seneca's letters to
-Lucillium (Epistulae Morales ad Lucilium)[link to TF's ].
+Since the lockdown started in March, I am working from home and as a result my
+life has become a bit sedentary for my liking.
+
+After work I go for a daily walk, or what I call GME (<a href="https://twitter.com/GOVUK/status/1248184707445141504?s=20">government mandated
+exercise</a>)
 </p>
-<p>
-What's the plan with this website? Whilst in the lockdown I thought I could
-teach myself web dev, something I've always postponed or was never as
-interested. I've mostly if not entirely done backend development.
-Voila' I decided to get a website and start developing. 
-The plan is to keep improving this site as I go and learn more about HTML, CSS,
-JS etc.
-It is also my plan to do everything by hand, 'the hard way' etc. and keep this
-site as minimalist as possible [like this https://mnmlist.com/about/ :D ].
+<ul>
+<li>I am working at Currencycloud as a Platform Enginner.</li>
+<li>I am learning Web development - CSS at the moment..</li>
+<li>I am reading 'Thinking in Systems, Antifragile and Courage to be
+disliked.</li>
+<li>My morning routine: meditate for 30 mins /Journal/ Read one letter from
+'Epistulae Morales ad Lucilium'</li> 
 
+</ul>
 </p>
     </div>
     <div id="contact">
         <ul>
-            <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/">LinkedIn</a></li>
-            <li><a target="_blank" href="https://twitter.com/robelyemane_">Twitter</a></li>
-            <li><a target="_blank" href="https://www.goodreads.com/user/show/87203258-robel-yemane">goodreads</a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/">linkedin</a></li>
+            <li><a target="_blank" href="https://twitter.com/robelyemane_">twitter</a></li>
             <li><a target="_blank" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
         </ul>
     </div>
