--- a/about.html
+++ b/about.html
@@ -10,44 +10,50 @@
       <h1><a target="_self" href="index.html">Robel Yemane</a></h1>
     </div>
    <div id="aboutme">
-    <p>
+<p>
+I'm a tech enthusiast and try to stay current with emerging tech. My job as
+Platform Engineer (DevOps) allows me to be involved mostly in infrastructre and
+backend development. 
+</p>
+<p>
+In the last few years I have taken great interest in Stoicism, mainly through
+the writings of Seneca and Marcus Aurelius. I find it very practical,
+action-oriented and a tool in the pursuit of self-mastery, perseverance and
+wisdom, as opposed to just being a field of academic inquiry.
+</p>
+
+I try to meditate and journal every day.
+I also enjoy listening to podcasts but these days the number of
+podcasts I am subscribed to is getting a bit out of hand.
+I enjoy reading mainly books but also blogs. Some of them are <a
+ href="https://www.goodreads.com/robelyemane">here</a>. 
+
+</p>
+<p>
 <ul>
         
 <li> 1985 - made in Eritrea.</li>
-<li> 1991 - went to the Italian school and stayed for 13 more years.</li>
+<li> 1991 - went to the Italian school. Graduated 13 years later.</li>
 <li> 2003 - graduate from high school.</li>
 <li> 2004 - military service.</li>
 <li> 2005 - building surveyor for ~5 years.</li>
-<li> 2010 moved to the UK and started Uni (University of Westminster - Computer
+<li> 2010 - moved to the UK and started Uni (University of Westminster - Computer
  Networks and Communications).</li>
-<li> Bought a second hand bicycle and rode around London (I still do but with
+<li> 2011 - bought a second hand bicycle and rode around London (I still do but with
 a newer one.)</li>
-<li> 2012 A year placement in Blackberry.</li>
-<li> 2014 Graduated from and started my first real software engineering job @ Thomson Reuters.</li>
-<li> 2018 moved companies and  got married</li>
-<li> 2019 moved again (current company)</li>
-<li> 2020 decided to buy a domain and start web dev for fun.</li>
+<li> 2012 - a year placement in Blackberry.</li>
+<li> 2014 - graduated and started my first real software engineering job.</li>
+<li> 2018 - got married & moved companies </li>
+<li> 2019 - moved again (current company)</li>
+<li> 2020 - lockdown! Decided to buy a domain and start web development for fun.</li>
 
-<li>Tech enthusiast and multilingual.</li>
-<li>Interested in the philosophy of Stoicism. I find that</li>
-it answers many of the question I have about my life, emotions and the
-world in general.</li>
-<li> I try to mediate and journal every day.</li>
-<li> Enjoy listening to podcast (more than watching) and nowadays the number of</li>
-<li> podcasts I am subscribed to is going a bit of of hand.</li>
-Some of the ones I regularly listen to are ( Arseblog, Making Sense, The
-knowledge Project, The Tim Ferriss Show, The Joe Rogan Experience,
-Conversations with Tyler Cowen, Derek Sivers, Hardcore History, Naval and some
-others)</li>
-<li> Spend some time reading books as well - some of them are <a
- href="https://www.goodreads.com/robelyemane">here</a> </li>
 </ul>
 </p>
     </div>
     <div id="contact">
         <ul>
-            <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/">LinkedIn</a></li>
-            <li><a target="_blank" href="https://twitter.com/robelyemane_">Twitter</a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/">linkedIn</a></li>
+            <li><a target="_blank" href="https://twitter.com/robelyemane_">twitter</a></li>
             <li><a target="_blank" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
         </ul>
     </div>
