first phase finalised

--- a/about.html
+++ b/about.html
@@ -12,14 +12,14 @@
    <div id="aboutme">
 <p>
 I'm a tech enthusiast and try to stay current with emerging tech. My job as
-Platform Engineer (DevOps) allows me to be involved mostly in infrastructre and
+Software Engineer (DevOps) allows me to be involved mostly in infrastructure and
 backend development. 
 </p>
 <p>
 In the last few years I have taken great interest in Stoicism, mainly through
 the writings of Seneca and Marcus Aurelius. I find it very practical,
 action-oriented and a tool in the pursuit of self-mastery, perseverance and
-wisdom, as opposed to just being a field of academic inquiry.
+wisdom, rather than just being a field of academic inquiry.
 </p>
 
 I try to meditate and journal every day.
