--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
    <div id="aboutme">
     <h2>Me in a nutshell</h2>
     <p>
-      Software Engineer - transitioned from application development to
-'DevOps'.
+      Software Engineer (DevOps) and tech enthusiast.
 </p>
 <p>
     I live and work in London. Born and lived in Eritrea for ~ 2/3
 of my life.
      </p>
      <p> 
-    I had a few years stint as a building surveryor after finishing high chool. 
+    I had a few years stint as a building surveyor after finishing high school. 
 </p>
 <p>
-   <del>Multilingual</del> - English, <a target="_self" href="https://en.wikipedia.org/wiki/Tigrinya_language">Tigrigna</a>, Italian and French.
+   <del>Multilingual</del> - <a target="_self" href="https://en.wikipedia.org/wiki/Tigrinya_language">Tigrigna</a>, English, Italian and French.
     Sadly, I'm forgetting the last two by the day.
 </p>
 <h2>Some more details?</h2>
