--- a/about.html
+++ b/about.html
@@ -12,11 +12,11 @@
    <div id="aboutme">
 <p>
 I'm a tech enthusiast and try to stay current with emerging tech. My job as
-Software Engineer (DevOps) allows me to be involved mostly in infrastructure and
+a Software Engineer (DevOps) allows me to be involved mostly in infrastructure and
 backend development. 
 </p>
 <p>
-In the last few years I have taken great interest in Stoicism, mainly through
+In the last few years, I have taken great interest in Stoicism, mainly through
 the writings of Seneca and Marcus Aurelius. I find it very practical,
 action-oriented and a tool in the pursuit of self-mastery, perseverance and
 wisdom, rather than just being a field of academic inquiry.
@@ -34,12 +34,11 @@ I enjoy reading mainly books but also blogs. Some of them are <a
         
 <li> 1985 - made in Eritrea.</li>
 <li> 1991 - went to the Italian school. Graduated 13 years later.</li>
-<li> 2003 - graduate from high school.</li>
 <li> 2004 - military service.</li>
 <li> 2005 - building surveyor for ~5 years.</li>
 <li> 2010 - moved to the UK and started Uni (University of Westminster - Computer
  Networks and Communications).</li>
-<li> 2011 - bought a second hand bicycle and rode around London (I still do but with
+<li> 2011 - bought a second-hand bicycle and rode around London (I still do but with
 a newer one.)</li>
 <li> 2012 - a year placement in Blackberry.</li>
 <li> 2014 - graduated and started my first real software engineering job.</li>
