--- a/index.html
+++ b/index.html
@@ -1,61 +1,61 @@
 <!doctype html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <title>Robel Yemane</title>
-      <link rel="stylesheet" type="text/css" href="styles/style.css">
-   </head>
-   <body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Robel Yemane</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+  </head>
+  <body>
     <div id="header">
       <h1><a target="_self" href="index.html">Robel Yemane</a></h1>
     </div>
-   <div id="aboutme">
-    <h2>Me in a nutshell</h2>
-    <p>
-      Software Engineer (DevOps) and tech enthusiast.
-</p>
-<p>
-    I live and work in London. Born and lived in Eritrea for ~ 2/3
-of my life.
-     </p>
-     <p> 
-    I had a few years stint as a building surveyor after finishing high school. 
-</p>
-<p>
-   <del>Multilingual</del> - <a target="_self" href="https://en.wikipedia.org/wiki/Tigrinya_language">Tigrigna</a>, English, Italian and French.
-    Sadly, I'm forgetting the last two by the day.
-</p>
-<h2>Some more details?</h2>
-<p>
-   More <a target="_self"  href="about.html">about me here</a>.
-</p>
-<p>
-<h2>Latest?</h2>
-<p>
-   <a target="_self"  href="now.html">Stuff I am doing now</a>.
-</p>
-<h2>Why a website?</h2>
-<p>
- Previously, I had little to no interest in front-end or web development. 
-During the lengthy lockdown, however, I thought I could make use of the time by 
-learning something new. So, since I have always toyed with the idea of having my own 
-website: here it is!
-</p>
-<p>
-Very basic, as are my current skills in HTML/CSS. 
-</p>
-<p>
-I intend to keep it as minimalist as possible. This means not using
-any framework or library and hand-writing everything. 
-
-</p>
-</div>
-    <div id="contact">
-        <ul>
-            <li><a target="_self" href="https://twitter.com/robelyemane_">twitter</a></li>
-            <li><a target="_self" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
-            <li><a target="_self" href="https://www.linkedin.com/in/ryemane/">linkedin</a></li>
-        </ul>
+    <div id="aboutme">
+      <h2>Me in a nutshell</h2>
+      <p>
+        Software Engineer (DevOps) and tech enthusiast.
+      </p>
+      <p>
+        I live and work in London. Born and lived in Eritrea for ~ 2/3
+        of my life.
+      </p>
+      <p> 
+        I had a few years stint as a building surveyor after finishing high school. 
+      </p>
+      <p>
+        <del>Multilingual</del> - <a target="_self" href="https://en.wikipedia.org/wiki/Tigrinya_language">Tigrigna</a>, English, Italian and French.
+        Sadly, I'm forgetting the last two by the day.
+      </p>
+      <h2>Some more details?</h2>
+      <p>
+        More <a target="_self"  href="about.html">about me here</a>.
+      </p>
+      <p>
+      <h2>Latest?</h2>
+      <p>
+        <a target="_self"  href="now.html">Stuff I am doing now</a>.
+      </p>
+      <h2>Why a website?</h2>
+      <p>
+        Previously, I had little to no interest in front-end or web development. 
+        During the lengthy lockdown, however, I thought I could make use of the time by 
+        learning something new. So, since I have always toyed with the idea of having my own 
+        website: here it is!
+      </p>
+      <p>
+        Very basic, as are my current skills in HTML/CSS. 
+      </p>
+      <p>
+        I intend to keep it as minimalist as possible. This means not using
+        any framework or library and hand-writing everything. 
+      </p>
     </div>
-    </body>
+    <div id="contact">
+      <ul>
+        <li><a target="_self" href="https://twitter.com/robelyemane_">twitter</a></li>
+        <li><a target="_self" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
+        <li><a target="_self" href="https://www.linkedin.com/in/ryemane/">linkedin</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
