--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </p>
       <h2>Why a website?</h2>
       <p>
-        This is my corner of the [digital] world. A space I own, where I
+        This is my corner of the [digital] world. A space I own, where I can
         freely express myself and have full ownership of the contents, without <a
         target="_self" href="https://xkcd.com/1150/">depending</a> on any
         third party or social media giant.
