35 bday thoughts and minor style change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="header">
       <h1><a target="_self" href="index.html">Robel Yemane</a></h1>
     </div>
-    <div id="aboutme">
+    <div id="content">
       <h2>Me in a nutshell</h2>
       <p>
         Software Engineer (DevOps) and tech enthusiast.
@@ -55,6 +55,13 @@
         I intend to keep it as minimalist as possible. This means not using
         any framework or library and hand-writing everything.
       </p>
+      <h2>Aritcles</h2>
+        
+      <ul id="articles">
+        <li><a target="_self" href="articles/35thoughts.html">35 Thoughts on my
+35th Birthday</a></li>
+      </ul>
+     
     </div>
     <div id="contact">
       <ul>
