--- a/now.html
+++ b/now.html
@@ -10,7 +10,7 @@
     <div id="header">
       <h1><a target="_self" href="index.html">Robel Yemane</a></h1>
     </div>
-    <div id="aboutme">
+    <div id="content">
       <p id=subtitle>
         (This is my <a href="https://nownownow.com/about">NOW</a> page)
       <p>
