--- a/about.html
+++ b/about.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
-    <div id="header">
+    <header>
       <h1><a target="_self" href="index.html">Robel Yemane</a></h1>
-    </div>
-    <div id="aboutme">
+    </header>
+    <section id="content">
       <p>
         I'm a tech enthusiast and try to stay current with emerging tech. My job as
         a Software Engineer (DevOps) allows me to be involved mostly in infrastructure and
@@ -46,13 +46,13 @@
         <li> 2019 - moved again (current company)</li>
         <li> 2020 - lockdown! Decided to buy a domain and start web development for fun.</li>
       </ul>
-    </div>
-    <div id="contact">
+    </section>
+    <section id="contact">
       <ul>
         <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/">linkedIn</a></li>
         <li><a target="_blank" href="https://twitter.com/robelyemane_">twitter</a></li>
         <li><a target="_blank" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
       </ul>
-    </div>
+    </section>
   </body>
 </html>
