--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
-    <div id="header">
+    <header>
       <h1><a target="_self" href="index.html">Robel Yemane</a></h1>
-    </div>
-    <div id="content">
+    </header>
+    <section id="content">
       <h2>Me in a nutshell</h2>
       <p>
         Software Engineer (DevOps) and tech enthusiast.
@@ -62,13 +62,13 @@
 35th Birthday</a></li>
       </ul>
      
-    </div>
-    <div id="contact">
+    </section>
+    <section id="contact">
       <ul>
         <li><a target="_self" href="https://twitter.com/robelyemane_">twitter</a></li>
         <li><a target="_self" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
         <li><a target="_self" href="https://www.linkedin.com/in/ryemane/">linkedin</a></li>
       </ul>
-    </div>
+    </section>
   </body>
 </html>
