--- a/now.html
+++ b/now.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
-    <div id="header">
+    <header>
       <h1><a target="_self" href="index.html">Robel Yemane</a></h1>
-    </div>
-    <div id="content">
+    </header>
+    <section id="content">
       <p id=subtitle>
         (This is my <a href="https://nownownow.com/about">NOW</a> page)
       <p>
@@ -35,13 +35,13 @@
       <p id=nowupdate>
         Last update: 22 July, 2020 - London, UK.
       </p>
-    </div>
-    <div id="contact">
+    </section>
+    <section id="contact">
       <ul>
         <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/">linkedin</a></li>
         <li><a target="_blank" href="https://twitter.com/robelyemane_">twitter</a></li>
         <li><a target="_blank" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
       </ul>
-    </div>
+    </section>
   </body>
 </html>
