--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
       <h2>Aritcles</h2>
         
       <ul id="articles">
-        <li><a target="_self" href="articles/35thoughts.html">35 Thoughts on my
-35th Birthday</a></li>
+        <li><a target="_self" href="articles/35thoughts.html">35 Thoughts on my 35th Birthday</a></li>
+        <li><a target="_self" href="articles/yourstory.html">The story you tell
+yourself</a></li>
       </ul>
      
     </section>
