Revert "first attempt to remove file extension"

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </p>
       <h2>Some more details?</h2>
       <p>
-        More <a target="_self"  href="about">about me here</a>.
+        More <a target="_self"  href="about.html">about me here</a>.
       </p>
       <p>
       <h2>Latest?</h2>
