removed html extension

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p>
       <h2>Latest?</h2>
       <p>
-        <a target="_self"  href="now.html">Stuff I am doing now</a>.
+        <a target="_self"  href="now">Stuff I am doing now</a>.
       </p>
       <h2>Why a website?</h2>
       <p>
@@ -58,8 +58,8 @@
       <h2>Aritcles</h2>
         
       <ul id="articles">
-        <li><a target="_self" href="articles/35thoughts.html">35 Thoughts on my 35th Birthday</a></li>
-        <li><a target="_self" href="articles/yourstory.html">The story you tell
+        <li><a target="_self" href="articles/35thoughts">35 Thoughts on my 35th Birthday</a></li>
+        <li><a target="_self" href="articles/yourstory">The story you tell
 yourself</a></li>
       </ul>
      
