--- a/now.html
+++ b/now.html
@@ -19,8 +19,7 @@
         After work I go for a daily walk, or what I call GME (<a href="https://twitter.com/GOVUK/status/1248184707445141504?s=20">government mandated
         exercise</a>).
         <p>
-         [Update] I am still trying to do the GME, but the rules are more
-         relaxed now although we're in the <s>second</s> nth lockdown.
+         [Update] I am still trying to do the GME, but the rules are more relaxed now although we're in the <s>second</s> nth lockdown.
         </p>
       </p>
       <ul>
