update now and email

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
       <ul>
         <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/">linkedIn</a></li>
         <li><a target="_blank" href="https://twitter.com/robelyemane_">twitter</a></li>
-        <li><a target="_blank" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
+        <li><a target="_blank" href="mailto:ryhgb03@gmail.com">e-mail</a></li>
       </ul>
     </section>
   </body>
