--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ yourself</a></li>
     <section id="contact">
       <ul>
         <li><a target="_self" href="https://twitter.com/robelyemane_">twitter</a></li>
-        <li><a target="_self" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
+        <li><a target="_self" href="mailto:ryhgb03@gmail.com">e-mail</a></li>
         <li><a target="_self" href="https://www.linkedin.com/in/ryemane/">linkedin</a></li>
       </ul>
     </section>
