--- a/now.html
+++ b/now.html
@@ -14,34 +14,35 @@
       <p id=subtitle>
         (This is my <a href="https://nownownow.com/about">NOW</a> page)
       <p>
-        Since the lockdown started in March, I am working from home and as a result my
-        life has become a bit sedentary for my liking.
-        After work I go for a daily walk, or what I call GME (<a href="https://twitter.com/GOVUK/status/1248184707445141504?s=20">government mandated
-        exercise</a>).
+        It's been a long while since I updated this paage.
+        A lot has happened since my last update. The biggest and best of all being I now have a 10 month old
+        baby girl. As anyone who has a kid can attest, your life changes unrecognisably... to the good.
+        It's a marvellous thing to happen to anyone and I am savouring it. Of course it comes with it's own challenges,
+        but that's life!
         <p>
-         [Update] I am still trying to do the GME, but the rules are more relaxed now although we're in the <s>second</s> nth lockdown.
+         So, I haven't had much of a routine in the past year, or better it looked very much like this:
+         <blockquote class="twitter-tweet" data-lang="en" data-theme="light"><p lang="en" dir="ltr">My old morning routine:<br><br>-Wake up early<br>-Meditate<br>-Stretch<br>-Drink green juice<br>-Journaling<br>-Set goals for the day<br><br>My new routine:<br><br>-Wake up very early<br>-Change baby&#39;s diaper<br>-Play with him<br>-Take the dog out<br>-Unload the dishwasher<br>-Put baby down for a nap</p>&mdash; Tiago Forte (@fortelabs) <a href="https://twitter.com/fortelabs/status/1473023931107856385?ref_src=twsrc%5Etfw">December 20, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </p>
       </p>
       <ul>
         <li>I am working at Currencycloud as a Platform Enginner.</li>
-        <li>I am reading <a href="https://www.amazon.co.uk/Thinking-Systems-Primer-Diana-Wright/dp/1844077268">Thinking
-            in Systems</a>, <a href="https://www.amazon.co.uk/Dialogues-Essays-Oxford-Worlds-Classics/dp/0199552401">Dialogues and Essays</a>
-            and <a href="https://www.amazon.co.uk/Guns-Germs-Steel-history-everybody/dp/0099302780"> Guns Germs &amp; Steel</a>
-        </li>
-        <li>My morning routine: meditate for 30 mins / journal / read one page from
-          <a href="https://www.amazon.co.uk/Calendar-Wisdom-Daily-Thoughts-Nourish/dp/0684837935">Calendar of Wisdom</a>
+        <li>I haven't been reading with any regularity although I have tried to read whenever I had some time.
+          So, the only books I am reading regularly are:
+          <a href="https://www.goodreads.com/book/show/29093292-the-daily-stoic">The Daily Stoic</a> and any of these
+          <a href="https://usborne.com/gb/books/browse-by-category/novelty-books/touchy-feely-books">Touchy-feely books</a> to my daughter
+          who enjoys them a lot.
         </li>
       </ul>
       <hr>
       <p id=nowupdate>
-        Last update: 3 Mar, 2021 - London, UK.
+        Last update: 15 Apr, 2022 - London, UK.
       </p>
     </section>
     <section id="contact">
       <ul>
         <li><a target="_blank" href="https://www.linkedin.com/in/ryemane/">linkedin</a></li>
         <li><a target="_blank" href="https://twitter.com/robelyemane_">twitter</a></li>
-        <li><a target="_blank" href="mailto:iamsnowball3@gmail.com">e-mail</a></li>
+        <li><a target="_blank" href="mailto:ryhgb03@gmail.com">e-mail</a></li>
       </ul>
     </section>
   </body>
