--- a/now.html
+++ b/now.html
@@ -14,10 +14,10 @@
       <p id=subtitle>
         (This is my <a href="https://nownownow.com/about">NOW</a> page)
       <p>
-        It's been a long while since I updated this paage.
-        A lot has happened since my last update. The biggest and best of all being I now have a 10 month old
+        It's been a long while since I updated this page.
+        A lot has happened since my last update. The biggest and best of all being I now have a 10-month-old
         baby girl. As anyone who has a kid can attest, your life changes unrecognisably... to the good.
-        It's a marvellous thing to happen to anyone and I am savouring it. Of course it comes with it's own challenges,
+        It's a marvelous thing to happen to anyone and I am savouring it. Of course, it comes with its own challenges,
         but that's life!
         <p>
          So, I haven't had much of a routine in the past year, or better it looked very much like this:
@@ -25,11 +25,11 @@
         </p>
       </p>
       <ul>
-        <li>I am working at Currencycloud as a Platform Enginner.</li>
+        <li>I am working at Currencycloud as a Platform Engineer.</li>
         <li>I haven't been reading with any regularity although I have tried to read whenever I had some time.
-          So, the only books I am reading regularly are:
+          So, the only books I am reading daily are
           <a href="https://www.goodreads.com/book/show/29093292-the-daily-stoic">The Daily Stoic</a> and any of these
-          <a href="https://usborne.com/gb/books/browse-by-category/novelty-books/touchy-feely-books">Touchy-feely books</a> to my daughter
+          <a href="https://usborne.com/gb/books/browse-by-category/novelty-books/touchy-feely-books">Touchy-feely books</a> for my daughter
           who enjoys them a lot.
         </li>
       </ul>
